src/app/blocked/dashboard/lastest-release/lastest-release.component.css
.card__information-wallet {
    display: flex;
    flex-direction: column;
}

.card__information-money {
    text-transform: uppercase;
    font-weight: 700;
}

.card-information-date {
    color: var(--gray-dark);
    font-size: 0.9rem;
}

@media screen and (min-width: 748px) {
    .card__information {
        display: flex;
        justify-content: space-between;
    }
}

@media screen and (min-width: 1200px) {
    .card--height {
        max-height: 35vh;
        width: 58vw;
        overflow: auto;
        
    }
}

